Phase 1 WIP: public API, platform SPI, FFM lifecycle support, runtime core (IPC, capabilities, assets, lifecycle, boot), evidence system, coverage gate, IPC protocol doc
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>